# can-i-fly

./: .gitignore  404.html  CNAME  README.md  index.html  package.json
_next/data/38LQC94FgKugQ9wlu5lKy/: index.json
_next/data/4ANuYEAERReUuJunxqTxH/: index.json
_next/data/CMc1BkjEZD2m4DTyfw10z/: index.json
_next/data/VFtm8YVmgoBKSzsRYRVMV/: index.json
_next/data/vPhl2H7VvZf4Xky6Lj_Qq/: index.json
_next/static/38LQC94FgKugQ9wlu5lKy/pages/: _app.js  index.js
_next/static/4ANuYEAERReUuJunxqTxH/pages/: _app.js  index.js
_next/static/89AUtHxgk-YEsW7pBQMqb/pages/: index.js
_next/static/9-bKCHoT_ldPqlFA30omp/pages/: index.js
_next/static/CMc1BkjEZD2m4DTyfw10z/pages/: index.js
_next/static/Dt7gyI7k3wnTb2LeYfzyt/pages/: index.js
_next/static/VFtm8YVmgoBKSzsRYRVMV/pages/: index.js
_next/static/ZDjArMXypAIUQzkh8SglE/: _buildManifest.js
_next/static/ZDjArMXypAIUQzkh8SglE/pages/: _app.js  index.js
_next/static/ZkSL-Bwykm9vTDuBLdGPW/: _buildManifest.js
_next/static/ZkSL-Bwykm9vTDuBLdGPW/pages/: index.js
_next/static/chunks/: 1486dee9.f1179071c751e6d0ce37.js  59ea867a.66ef486e2150bf7d43dc.js
_next/static/runtime/: main-f54380f8833586d9a8f4.js  main-fc4c49d1a595278780ae.js  main.js  webpack.js
components/index/: Footer.js  Header.js
crawler/: main.py  pyproject.toml
crawler/canifly_crawler/: iata_website_data.py  main.py  unwfp_api_data.py
crawler/canifly_crawler/notebooks/: study_unwfp_dashboard.ipynb
data/: airlineInfo.js  countries.js  countries.json  countryInfo.js  rawInfo.js  rawInfo.json
pages/: _app.js  index.js
styles/: global.css
(+186 files in other folders)
