[tool.poetry]
name = "canifly-crawler"
version = "0.1.0"
description = ""
authors = ["José Ribeiro <ribeirojose@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
requests = "^2.23.0"
jsonnet = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
